--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AKSHATA BEAUTY HERBAL PARLOUR - Beauty & Bridal Services</title>
-  <meta name="description"
-    content="Book your beauty and bridal appointments at Akshata Beauty Herbal Parlour. Professional makeup, hair styling, and complete bridal packages.">
+<meta charset="UTF-8" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>AKSHATA BEAUTY HERBAL PARLOUR - Beauty & Bridal Services</title>
+<meta name="description"
+  content="Book your beauty and bridal appointments at Akshata Beauty Herbal Parlour. Professional makeup, hair styling, and complete bridal packages.">
 
+<!-- Performance Optimization Hints -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="dns-prefetch" href="https://accounts.google.com">
+<link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
 
-  <!-- Google Identity Services -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+<!-- Google Identity Services -->
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 
-  <!-- Bootstrap Icons CDN for reliable cross-platform icon visibility -->
+<!-- Bootstrap Icons CDN for reliable cross-platform icon visibility -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+  media="print" onload="this.media='all'">
+<noscript>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</noscript>
 </head>
 
 <body>
