--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
       rel="stylesheet">
   </noscript>
 
-  <!-- Google Identity Services -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-
   <!-- Bootstrap Icons CDN for reliable cross-platform icon visibility -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     media="print" onload="this.media='all'">
@@ -84,6 +81,8 @@
     </div>
   </div>
   <script type="module" src="/src/main.tsx"></script>
+  <!-- Google Identity Services - Loaded after main app -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </body>
 
 </html>
