--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
   <meta name="description"
     content="Book your beauty and bridal appointments at Akshata Beauty Herbal Parlour. Professional makeup, hair styling, and complete bridal packages.">
 
+  <!-- Resource Hints for Faster Loading -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://accounts.google.com">
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
 
-  <!-- Google Identity Services -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-
-  <!-- Bootstrap Icons CDN for reliable cross-platform icon visibility -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- Bootstrap Icons - Non-blocking -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    media="print" onload="this.media='all'">
+  <noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  </noscript>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <!-- Google Identity Services - Deferred to end -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </body>
 
 </html>
